# samshee

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.schema.json
exampledata/: SampleSheet_VH01300_3.csv  SampleSheet_VH01300_4.csv  SampleSheet_v2.csv  Samplesheet_p169_gi_isa_3_d859db48bc554487920d954fc803edcd.csv  issue_5-2.csv  issue_5-3.csv  issue_5-4.csv  issue_6-2.csv  issue_6.csv  issue_7.csv
ilsa2/: __init__.py  samplesheetv2.py  sectionedsheet.py  validation.py
src/ilsa2/: sectionedsheet.py  validation.py
src/samshee/: __init__.py  __main__.py  samplesheetv2.py  sectionedsheet.py  validation.py
tests/: test.py  test_conversion.py  test_io.py  test_validation.py
