[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samshee"
version = "0.1.12"
authors = [
  { name="Jakob Simeth", email="jakob.simeth@ukr.de" }
]
description="A schema-agnostic parser and writer for illumina sample sheets v2."
readme = "README.md"
license={file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jsonschema>=4.19",
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/lit-regensburg/samshee"
"Bug Tracker" = "https://github.com/lit-regensburg/samshee/issues"

[tool.pytest.ini_options]
pythonpath = "src"
